# AI-ChatBot

./: .gitignore  README.md  main.py  pyproject.toml  voice_service.py
backend/: main.py
backend/api/: endpoints.py
backend/core/: config.py
backend/services/: cache_service.py  rag_service.py  stt_service.py  voice_service.py
scripts/: ingest.py
vector_store/: index.faiss  index.pkl
