[project]
name = "ai-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.14.2",
    "fastapi>=0.136.3",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.4",
    "pypdf>=6.13.1",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "sentence-transformers>=5.5.1",
    "uvicorn>=0.49.0",
]
